# MusicLibraryOrganizer

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  main.h  song.c  song.h  song_library.c  song_library.h  song_node.c  song_node.h  songs.csv
